--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -41,6 +41,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: Build and docs
         run: |
+          cd front
           npm run jsdoc
           npm run build --if-present
       - name: Setup Pages
