--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build and docs
         run: |
           cd front
-          npm ci
+          npm i
           npm run jsdoc
           npm run build --if-present
       - name: Setup Pages
