--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
+      - name: Get directory
+        run: ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
