--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -33,6 +33,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: npm ci and test
+        run: |
+          cd front
+          npm i
+          npm test  
       - name: Build all stacks
         run: docker-compose up -d
       - name: Upload coverage reports to Codecov
@@ -42,7 +47,6 @@ jobs:
       - name: Build and docs
         run: |
           cd front
-          npm i
           npm run jsdoc
           npm run build --if-present
       - name: Setup Pages
