--- a/front/package.json
+++ b/front/package.json
@@ -50,5 +50,10 @@
     "gh-pages": "^6.1.1",
     "jsdoc": "^4.0.2",
     "react-test-renderer": "^18.2.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   }
 }
