--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm i and test
+      - name: npm ci and test
         run: |
           cd front
-          npm i
+          npm ci
           npm test  
       - name: Build all stacks
         run: docker-compose up -d
