--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm ci and test
+      - name: npm i and test
         run: |
           cd front
-          npm ci
+          npm i
           npm test  
       - name: Build all stacks
         run: docker-compose up -d
