--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -41,6 +41,8 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - name: check git status
+        run: git status
       - name: Update tag version
         run: |
           git config --global user.email "lorysjele@gmail.com"
