--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -22,10 +22,10 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [21.x]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -33,7 +33,7 @@ jobs:
       - name: npm i and test
         run: |
           cd front
-          npm i
+          npm ci
           npm test  
       - name: Build all stacks
         run: docker-compose up -d
