--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: check node&npm versions
+        run: |
+          node -v
+          npm -v
       - name: npm i and test
         run: |
           cd front
