--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -30,6 +30,8 @@ jobs:
           npm test  
       - name: Build all stacks
         run: docker-compose up -d
+      - name: Run e2e tests with cypress
+        uses: cypress-io/github-action@v6
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
