--- a/front/package.json
+++ b/front/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^15.0.5",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.7",
+    "axios-mock-adapter": "1.22.0",
+    "cypress": "^13.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
-    "web-vitals": "^3.5.2",
-    "react-modal": "3.16.1",
-    "axios-mock-adapter": "1.22.0"
+    "web-vitals": "^3.5.2"
   },
   "homepage": "https://krxtch.github.io/tp_ci/",
   "scripts": {
@@ -24,7 +25,8 @@
     "eject": "react-scripts eject",
     "jsdoc": "jsdoc -c ./jsdoc.config.json -r -d ./docs",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "cypress": "cypress open"
   },
   "eslintConfig": {
     "extends": [
