--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -32,6 +32,8 @@ jobs:
         run: docker-compose up -d
       - name: Run e2e tests with cypress
         uses: cypress-io/github-action@v6
+        with:
+          spec: front/cypress/e2e
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
