--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --watchAll=false --collectCoverageFrom=!src/reportWebVitals.js --collectCoverageFrom=!src/index.js --collectCoverageFrom=!src/logo.svg",
     "eject": "react-scripts eject",
-    "jsdoc": "jsdoc -R ../README.md -c ./jsdoc.config.json -r -d ./public/docs",
+    "jsdoc": "jsdoc -R ../README.md -c ./jsdoc.config.json -r -d ./public/docs ../",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "cypress": "cypress open"
