--- a/.github/workflows/build_test_deploy_app.yml
+++ b/.github/workflows/build_test_deploy_app.yml
@@ -35,7 +35,7 @@ jobs:
         with: 
           working-directory: front
       - name: Stop the stack
-        run: docker-compoose down
+        run: docker-compose down
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
